--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>webpack 2 demo</title>
   </head>
   <body>
+    <div id="app"></div>
     <script src="dist/bundle.js"></script>
   </body>
 </html>
